chore(website): fix styles and remove some features on mobile

--- a/components/MarkdownPreview.module.scss
+++ b/components/MarkdownPreview.module.scss
@@ -3,6 +3,7 @@
 .container {
   @include rmd-utils-scroll;
 
+  display: block;
   padding: 2rem;
 
   :global {
